# gewicht-tracker

./: .gitignore  README.md  package-lock.json  pyproject.toml
api/: config.py  db.py  main.py  projectTypes.py
docker/: Dockerfile  db_schema.sql  docker-compose.dev.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: CreateForm.vue  List.vue  ListItem.vue  Weight.vue
frontend/src/router/: index.ts
frontend/src/util/: customTypes.ts
frontend/src/views/: AboutView.vue  AnimalView.vue  AnimalsView.vue  HomeView.vue
